[package]
name = "priority-expiry-cache"
version = "0.2.1"
categories = ["data-structures"]
authors = ["Luca Paterlini <paterlini.luca@gmail.com>"]
description = """A cache that evicts items based on their priority and expiry time (LRU + TTL)
Add (O(1)), Get (O(1)), Evict (O(1)) in both time and space."""
license = "MIT/Apache-2.0"
homepage = "https://github.com/LucaPaterlini/priority-expiry-cache"

[dependencies]
lru = "0.16.3"
